# dynml

./: .flake8  .gitignore  .readthedocs.yaml  .test_cpu.sh  README.md  pyproject.toml  test_gpu.sh
.docs/: conf.py  index.rst
.docs/rsts/: test_cpu.rst  test_gpu.rst
.docs/rsts/dynml/: __init__.rst
.docs/rsts/dynml/dyn/: __init__.rst
.docs/rsts/dynml/examples/: __init__.rst  burgers.rst  cgle.rst  cylinder.rst  fiber.rst  grayscott.rst  heat.rst  kse.rst  line.rst  parabola.rst  paraboloid.rst  poisson.rst  transport.rst  wake.rst
.docs/rsts/dynml/ml/: __init__.rst  (+4 more)
.docs/rsts/test_dynml/: __init__.rst
dynml/: __init__.py
dynml/dyn/: __init__.py
dynml/dyn/cont/: __init__.py
dynml/dyn/discrete/: __init__.py  numsolve.py  system.py
dynml/examples/: __init__.py  burgers.py  cgle.py  cylinder.py  fiber.py  grayscott.py  kse.py  line.py  parabola.py  paraboloid.py  poisson.py  wake.py
dynml/ml/: __init__.py  dimred.py  loss.py  paramfunc.py  pkl.py
dynml/utils/: __init__.py  config.py
test_dynml/: __init__.py
test_dynml/dyn/: __init__.py
test_dynml/dyn/cont/: __init__.py
test_dynml/dyn/discrete/: __init__.py  test_numsolve.py  test_system.py
test_dynml/examples/: __init__.py  test_burgers.ipynb  test_cgle.ipynb  test_cylinder.ipynb  test_fiber.ipynb  test_grayscott.ipynb  test_kse.ipynb  test_line.ipynb  test_parabola.ipynb  test_paraboloid.ipynb  test_poisson.ipynb  test_transport.ipynb  test_wake.ipynb
test_dynml/ml/: __init__.py  test_dimred.py  test_loss.py  test_paramfunc.py  test_pkl.py
test_dynml/utils/: __init__.py  test_config.py
(+48 files in other folders)
